# libodb

./: INSTALL  Makefile.am  README  configure.ac  libodb-vc12.sln  libodb-vc9.sln  libodb.pc.in  makefile  version
m4/: disable-rpath.m4  pkgconfig.m4  static-lib.m4  threads.m4
odb/: Makefile.am  buffer.cxx  buffer.hxx  cache-traits.hxx  callback.cxx  callback.hxx  connection.cxx  connection.hxx  connection.ixx  connection.txx  container-traits.hxx  core.hxx  database.cxx  database.hxx  database.ixx  database.txx  exception.cxx  exception.hxx  exceptions.cxx  exceptions.hxx  forward.hxx  function-table.hxx  lazy-pointer-traits.hxx  lazy-ptr-impl.cxx  lazy-ptr-impl.hxx  lazy-ptr-impl.ixx  lazy-ptr-impl.txx  lazy-ptr.hxx  lazy-ptr.ixx  lazy-ptr.txx  libodb-vc10.vcxproj  libodb-vc11.vcxproj  libodb-vc11.vcxproj.filters  libodb-vc12.vcxproj  libodb-vc12.vcxproj.filters  libodb-vc8.vcproj  libodb-vc9.vcproj  makefile  nested-container.hxx  no-id-object-result.hxx  (+67 more)
odb/compilers/vc/: post.hxx  pre.hxx
odb/details/: buffer.cxx  buffer.hxx  c-string.hxx  condition.cxx  condition.hxx  config-vc.h  config.h  config.h.in  config.hxx  exception.hxx  export.hxx  function-wrapper.hxx  function-wrapper.ixx  lock.cxx  lock.hxx  mutex.cxx  mutex.hxx  shared-ptr-fwd.hxx  shared-ptr.hxx  thread.hxx  tls.hxx  transfer-ptr.hxx  type-info.hxx  unique-ptr.hxx  unused.hxx  wrapper-p.hxx
odb/details/meta/: answer.hxx  class-p.hxx  polymorphic-p.hxx  remove-c.hxx  remove-const-volatile.hxx  remove-const.hxx  remove-cv.hxx  remove-p.hxx  remove-pointer.hxx  remove-v.hxx  remove-volatile.hxx
odb/details/posix/: condition.hxx  condition.ixx  exceptions.cxx  exceptions.hxx  mutex.hxx  mutex.ixx  thread.cxx  thread.hxx  thread.ixx  tls.hxx  tls.ixx  tls.txx
odb/details/shared-ptr/: base.cxx  base.hxx  base.ixx  base.txx  counter-type.hxx  exception.hxx
odb/details/win32/: condition.cxx  condition.hxx  condition.ixx  dll.cxx  exceptions.cxx  exceptions.hxx  init.cxx  init.hxx  lock.hxx  mutex.hxx  mutex.ixx  once-init.hxx  once.cxx  once.hxx  once.ixx  thread.cxx  thread.hxx  tls-init.hxx  tls.cxx  tls.hxx  tls.ixx  tls.txx
odb/meta/: answer.hxx  class-p.hxx  polymorphic-p.hxx  remove-c.hxx  remove-cv.hxx  remove-p.hxx  remove-v.hxx
odb/shared-ptr/: base.cxx  base.hxx  base.ixx  base.txx
odb/tr1/: lazy-pointer-traits.hxx  lazy-ptr.hxx  lazy-ptr.ixx  lazy-ptr.txx  memory.hxx  pointer-traits.hxx  wrapper-traits.hxx
